--- a/.template.html
+++ b/.template.html
@@ -35,14 +35,17 @@
 
 
 <!-- *****handfourstone_start** -->
-<div id="main">
-<h1 id="欢迎光临我的博客"><span class="header-section-number">1</span> 欢迎光临我的博客</h1>
-<h2 id="linux"><span class="header-section-number">1.1</span> linux</h2>
-<h3 id="kernel"><span class="header-section-number">1.1.1</span> kernel</h3>
-<h4 id="网络协议栈"><span class="header-section-number">1.1.1.1</span> 网络协议栈</h4>
-<h5 id="邻居子系统"><span class="header-section-number">1.1.1.1.1</span> 邻居子系统</h5>
-<p><a href="./arp.html">邻居子系统学习笔记</a></p>
-</div>
+
+<h1>这是标题1</h1>
+<h2>这是标题1.1</h2>
+<p>这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，这是一段内容，它归属于标题1.1，</p>
+<h2>这是标题1.2</h2>
+<p>这是一段内容，它归属于标题1.2，这是一段内容，它归属于标题1.2，这是一段内容，它归属于标题1.2，这是一段内容，它归属于标题1.2，这是一段内容，它归属于标题1.2，这是一段内容，它归属于标题1.2，</p>
+<h1>这是标题2</h1>
+<h2>这是标题2.1</h2>
+<p>这是一段内容，它归属于标题2.1，这是一段内容，它归属于标题2.1，这是一段内容，它归属于标题2.1，这是一段内容，它归属于标题2.1，这是一段内容，它归属于标题2.1，这是一段内容，它归属于标题2.1，</p>
+<h2>这是标题2.2</h2>
+<p>这是一段内容，它归属于标题2.2，这是一段内容，它归属于标题2.2，这是一段内容，它归属于标题2.2，这是一段内容，它归属于标题2.2，这是一段内容，它归属于标题2.2，这是一段内容，它归属于标题2.2，</p>
 
 <!-- ******** handfourstone_end ************ -->
 
@@ -57,7 +60,7 @@
             $('#tree').ztree_toc({
                 is_auto_number:false,
                 documment_selector:'.markdown-body',
-                is_expand_all: false,
+                is_expand_all: true
             });
         });
     </script>
