--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>markdownToc</title>
+        <title>handfourstone博客</title>
         <link rel="stylesheet" type="text/css" href="./markdownToc_files/github2-rightpart.css" media="all">
         <link rel="stylesheet" type="text/css" href="./markdownToc_files/github1-contents.css">
         <link rel="stylesheet" href="./markdownToc_files/zTreeStyle.css" type="text/css">
@@ -36,12 +36,23 @@
 
 <!-- *****handfourstone_start** -->
 <div id="main">
-<h1 id="欢迎光临我的博客"><span class="header-section-number">1</span> 欢迎光临我的博客</h1>
-<h2 id="linux"><span class="header-section-number">1.1</span> linux</h2>
-<h3 id="kernel"><span class="header-section-number">1.1.1</span> kernel</h3>
-<h4 id="网络协议栈"><span class="header-section-number">1.1.1.1</span> 网络协议栈</h4>
-<h5 id="邻居子系统"><span class="header-section-number">1.1.1.1.1</span> 邻居子系统</h5>
+<p style="font-size:50px;text-align:center;">
+欢迎光临我的博客
+</p>
+<h1 id="声明"><span class="header-section-number">1</span> 声明</h1>
+<p style="font-size:20px">
+欢迎光临我的博客，鉴于本人能力有限，博客中可能存在一些错误或者描述不恰到的地方，希望大家批评指正。您的每次意见或者建议都将很快的反应在我的博客中。下面是我的联系方式。
+</p>
+<p>email: <i style="color:blue">handfourstone@gmail.com </i><br />
+twitter: <i style="color:blue">handfourstone </i><br />
+facebook: <i style="color:blue">fourstone hand </i></p>
+<h1 id="linux"><span class="header-section-number">2</span> linux</h1>
+<h2 id="内核"><span class="header-section-number">2.1</span> 内核</h2>
+<h3 id="网络协议栈"><span class="header-section-number">2.1.1</span> 网络协议栈</h3>
+<h4 id="邻居子系统"><span class="header-section-number">2.1.1.1</span> 邻居子系统</h4>
 <p><a href="./arp.html">邻居子系统学习笔记</a></p>
+<h4 id="iptablesnetfilter"><span class="header-section-number">2.1.1.2</span> iptables/netfilter</h4>
+<h4 id="路由子系统"><span class="header-section-number">2.1.1.3</span> 路由子系统</h4>
 </div>
 
 <!-- ******** handfourstone_end ************ -->
