加入百度流量统计功能
Summary:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" type="text/css" href="./markdownToc_files/github2-rightpart.css" media="all">
         <link rel="stylesheet" type="text/css" href="./markdownToc_files/github1-contents.css">
         <link rel="stylesheet" href="./markdownToc_files/zTreeStyle.css" type="text/css">
+        <script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?081c28587dfd5a75650cd979b7abb2b3";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
         <style>
             .ztree li a.curSelectedNode {
                 padding-top: 0px;
